# routes/api.php
@@ -34,4 +34,11 @@ Route::middleware('throttle:api')->prefix('v1')->group(function () {
     // Liste des comptes
     Route::get('comptes/non-archives', [CompteController::class, 'nonArchives']);
     Route::get('comptes/archives', [CompteController::class, 'archives']);
+
+    // Transactions
+    Route::post('transactions/depot/{compte}', [TransactionController::class, 'depot']);
+    Route::post('transactions/retrait/{compte}', [TransactionController::class, 'retrait']);
+    Route::post('transactions/virement', [TransactionController::class, 'virement']);
+    Route::get('transactions/historique/{compte}', [TransactionController::class, 'historique']);
+    Route::get('transactions/{transaction}', [TransactionController::class, 'show']);
 });
